@@ -583,10 +583,34 @@
     </div>
     <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_html### -->
 
+    <!-- ###SUB_INCLUDED_FIELD_terms_acknowledged### -->
+    <div class="viewLabelInput formRowTermsAcknowledged">
+        <div class="viewLabel divLabelTermsAcknowledged">
+            <label for="agency-terms_acknowledged" class="labelTermsAcknowledged">###LABEL_TERMS_ACKNOWLEDGED### ###REQUIRED_TERMS_ACKNOWLEDGED###</label>
+        </div>
+        <div class="viewLabelLink formLinkTerms">
+            <p><a href="###TERMS_URL###" title="###LABEL_TOOLTIP_CLICK_HERE_TO_SEE_TERMS###">###LABEL_CLICK_HERE_TO_SEE_TERMS###</a></p>
+        </div>
+        <!-- ###SUB_ERROR_FIELD_terms_acknowledged### -->
+        <div class="viewLabelError viewErrorTermsAcknowledged">
+            <p>###EVAL_ERROR_FIELD_terms_acknowledged###</p>
+        </div>
+        <!-- ###SUB_ERROR_FIELD_terms_acknowledged### -->
+        <!-- ###SUB_REQUIRED_FIELD_terms_acknowledged### -->
+        <div class="viewLabelRequired formRequiredTermsAcknowledged">
+            <p>###MISSING_TERMS_ACKNOWLEDGED###</p>
+        </div>
+        <!-- ###SUB_REQUIRED_FIELD_terms_acknowledged### -->
+        <div class="viewInput divInputTermsAcknowledged">
+            ###TCA_INPUT_terms_acknowledged###
+        </div>
+    </div>
+    <!-- ###SUB_INCLUDED_FIELD_terms_acknowledged### -->
+
     <!-- ###SUB_INCLUDED_FIELD_language### -->
     <div class="viewLabelInput formRowLanguage">
         <div class="viewLabel divLabelLanguage">
-            <label for="agency-language" class="labelTermsAcknowledged" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE### ###REQUIRED_LANGUAGE###</label>
+            <label for="agency-language" class="labelLanguage" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE### ###REQUIRED_LANGUAGE###</label>
         </div>
         <!-- ###SUB_REQUIRED_FIELD_language### -->
         <div class="viewLabelRequired formRequiredLanguage">
@@ -686,7 +710,7 @@
         <div class="viewLabel divLabelTermsAcknowledged">
             <label for="agency-terms_acknowledged" class="labelTermsAcknowledged">###LABEL_TERMS_ACKNOWLEDGED### ###REQUIRED_TERMS_ACKNOWLEDGED###</label>
         </div>
-        <div class="viewLabel divLabelLinkTermsAcknowledged">
+        <div class="viewLabelLink formLinkTerms">
             <p><a href="###TERMS_URL###" title="###LABEL_TOOLTIP_CLICK_HERE_TO_SEE_TERMS###">###LABEL_CLICK_HERE_TO_SEE_TERMS###</a></p>
         </div>
         <!-- ###SUB_ERROR_FIELD_terms_acknowledged### -->
@@ -1710,10 +1734,34 @@ The user is informed that a message has been sent to his email address and that 
     </div>
     <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_html### -->
 
+    <!-- ###SUB_INCLUDED_FIELD_terms_acknowledged### -->
+    <div class="viewLabelInput formRowTermsAcknowledged">
+        <div class="viewLabel divLabelTermsAcknowledged">
+            <label for="agency-terms_acknowledged" class="labelTermsAcknowledged">###LABEL_TERMS_ACKNOWLEDGED### ###REQUIRED_TERMS_ACKNOWLEDGED###</label>
+        </div>
+        <div class="viewLabelLink formLinkTerms">
+            <p><a href="###TERMS_URL###" title="###LABEL_TOOLTIP_CLICK_HERE_TO_SEE_TERMS###">###LABEL_CLICK_HERE_TO_SEE_TERMS###</a></p>
+        </div>
+        <!-- ###SUB_ERROR_FIELD_terms_acknowledged### -->
+        <div class="viewLabelError viewErrorTermsAcknowledged">
+            <p>###EVAL_ERROR_FIELD_terms_acknowledged###</p>
+        </div>
+        <!-- ###SUB_ERROR_FIELD_terms_acknowledged### -->
+        <!-- ###SUB_REQUIRED_FIELD_terms_acknowledged### -->
+        <div class="viewLabelRequired formRequiredTermsAcknowledged">
+            <p>###MISSING_TERMS_ACKNOWLEDGED###</p>
+        </div>
+        <!-- ###SUB_REQUIRED_FIELD_terms_acknowledged### -->
+        <div class="viewInput divInputTermsAcknowledged">
+            ###TCA_INPUT_terms_acknowledged###
+        </div>
+    </div>
+    <!-- ###SUB_INCLUDED_FIELD_terms_acknowledged### -->
+
     <!-- ###SUB_INCLUDED_FIELD_language### -->
     <div class="viewLabelInput formRowLanguage">
         <div class="viewLabel divLabelLanguage">
-            <label for="agency-language" class="labelTermsAcknowledged" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE### ###REQUIRED_LANGUAGE###</label>
+            <label for="agency-language" class="labelLanguage" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE### ###REQUIRED_LANGUAGE###</label>
         </div>
         <!-- ###SUB_REQUIRED_FIELD_language### -->
         <div class="viewLabelRequired formRequiredLanguage">
@@ -1813,7 +1861,7 @@ The user is informed that a message has been sent to his email address and that 
         <div class="viewLabel divLabelTermsAcknowledged">
             <label for="agency-terms_acknowledged" class="labelTermsAcknowledged">###LABEL_TERMS_ACKNOWLEDGED### ###REQUIRED_TERMS_ACKNOWLEDGED###</label>
         </div>
-        <div class="viewLabel divLabelLinkTermsAcknowledged">
+        <div class="viewLabelLink formLinkTerms">
             <p><a href="###TERMS_URL###" title="###LABEL_TOOLTIP_CLICK_HERE_TO_SEE_TERMS###">###LABEL_CLICK_HERE_TO_SEE_TERMS###</a></p>
         </div>
         <!-- ###SUB_ERROR_FIELD_terms_acknowledged### -->
@@ -2774,10 +2822,34 @@ The user is informed that a message has been sent to the email address and that 
     </div>
     <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_html### -->
 
+    <!-- ###SUB_INCLUDED_FIELD_terms_acknowledged### -->
+    <div class="viewLabelInput formRowTermsAcknowledged">
+        <div class="viewLabel divLabelTermsAcknowledged">
+            <label for="agency-terms_acknowledged" class="labelTermsAcknowledged">###LABEL_TERMS_ACKNOWLEDGED### ###REQUIRED_TERMS_ACKNOWLEDGED###</label>
+        </div>
+        <div class="viewLabelLink formLinkTerms">
+            <p><a href="###TERMS_URL###" title="###LABEL_TOOLTIP_CLICK_HERE_TO_SEE_TERMS###">###LABEL_CLICK_HERE_TO_SEE_TERMS###</a></p>
+        </div>
+        <!-- ###SUB_ERROR_FIELD_terms_acknowledged### -->
+        <div class="viewLabelError viewErrorTermsAcknowledged">
+            <p>###EVAL_ERROR_FIELD_terms_acknowledged###</p>
+        </div>
+        <!-- ###SUB_ERROR_FIELD_terms_acknowledged### -->
+        <!-- ###SUB_REQUIRED_FIELD_terms_acknowledged### -->
+        <div class="viewLabelRequired formRequiredTermsAcknowledged">
+            <p>###MISSING_TERMS_ACKNOWLEDGED###</p>
+        </div>
+        <!-- ###SUB_REQUIRED_FIELD_terms_acknowledged### -->
+        <div class="viewInput divInputTermsAcknowledged">
+            ###TCA_INPUT_terms_acknowledged###
+        </div>
+    </div>
+    <!-- ###SUB_INCLUDED_FIELD_terms_acknowledged### -->
+
     <!-- ###SUB_INCLUDED_FIELD_language### -->
     <div class="viewLabelInput formRowLanguage">
         <div class="viewLabel divLabelLanguage">
-            <label for="agency-language" class="labelTermsAcknowledged" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE### ###REQUIRED_LANGUAGE###</label>
+            <label for="agency-language" class="labelLanguage" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE### ###REQUIRED_LANGUAGE###</label>
         </div>
         <!-- ###SUB_REQUIRED_FIELD_language### -->
         <div class="viewLabelRequired formRequiredLanguage">
